src/objects/Workflow_event__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_Finance__c</fullName>
        <label>Amount of Finance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Checked_by_Change_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked by Change Delivery?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description_Convert__c</fullName>
        <formula>CASE( Event_Description__c  ,&quot;HPP Eligibility Assessment&quot;,1,&quot;Agreement In Principle&quot;,2,&quot;Home Purchase Plan Application&quot;,3,&quot;Signed Application received&quot;,4, &quot;Start Finance Workflow&quot;,5,&quot;Confirm Check List&quot;,6,&quot;Awaiting Missing Documents&quot;,7,&quot;HPP Experian Credit Check&quot;,8,&quot;Refer to Credit Risk&quot;,9,&quot;Decline Letter&quot;,10,&quot;FCU Check 1&quot;,11,&quot;Instruct Valuation&quot;,12,&quot;Valuation Received&quot;,13,&quot;Send Offer and Contract&quot;,14,&quot;Instruct Solicitor&quot;,15,&quot;Customer returned offer&quot;,16,&quot;Insurance in place&quot;,17,&quot;Solicitor Confirmation&quot;,18,&quot;Certificate of Title Received&quot;,19,&quot;Certificate of Title Accepted&quot;,20,&quot;FCU Check 2&quot;,21,&quot;Managing Director Approval&quot;,22,&quot;Update Application Details&quot;,23,&quot;Transfer Funds&quot;,24,&quot;Setup Finance on System&quot;,25,&quot;Welcome Letter&quot;,26,&quot;obtain invoice re fee assisted only&quot;,27,&quot;when cancel app: chase fees from cust&quot;,28,&quot;Repayment Schedule&quot;,29,&quot;Cancel Application&quot;,30,&quot;Pay procurement fee to intermediary&quot;,31, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Description Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP Eligibility Assessment</fullName>
                </value>
                <value>
                    <fullName>Agreement In Principle</fullName>
                </value>
                <value>
                    <fullName>Home Purchase Plan Application</fullName>
                </value>
                <value>
                    <fullName>Signed Application Received</fullName>
                </value>
                <value>
                    <fullName>Start Finance Workflow</fullName>
                </value>
                <value>
                    <fullName>Confirm Check List</fullName>
                </value>
                <value>
                    <fullName>Awaiting Missing Documents</fullName>
                </value>
                <value>
                    <fullName>HPP Experian Credit Check</fullName>
                </value>
                <value>
                    <fullName>Refer to Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Decline Letter</fullName>
                </value>
                <value>
                    <fullName>FCU Check 1</fullName>
                </value>
                <value>
                    <fullName>Instruct Valuation</fullName>
                </value>
                <value>
                    <fullName>Valuation Received</fullName>
                </value>
                <value>
                    <fullName>Send Offer and Contract</fullName>
                </value>
                <value>
                    <fullName>Instruct Solicitor</fullName>
                </value>
                <value>
                    <fullName>Customer returned offer</fullName>
                </value>
                <value>
                    <fullName>Insurance in place</fullName>
                </value>
                <value>
                    <fullName>Solicitor Confirmation</fullName>
                </value>
                <value>
                    <fullName>Certificate of Title Received</fullName>
                </value>
                <value>
                    <fullName>Certificate of Title Accepted</fullName>
                </value>
                <value>
                    <fullName>FCU Check 2</fullName>
                </value>
                <value>
                    <fullName>Managing Director Approval</fullName>
                </value>
                <value>
                    <fullName>Update Application Details</fullName>
                </value>
                <value>
                    <fullName>Transfer Funds</fullName>
                </value>
                <value>
                    <fullName>Setup Finance on System</fullName>
                </value>
                <value>
                    <fullName>Welcome Letter</fullName>
                </value>
                <value>
                    <fullName>obtain invoice re fee assisted only</fullName>
                </value>
                <value>
                    <fullName>when cancel app: chase fees from cust</fullName>
                </value>
                <value>
                    <fullName>Repayment Schedule</fullName>
                </value>
                <value>
                    <fullName>Cancel Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Source__c</fullName>
        <label>Event Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EBA</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                    <default>true</default>
                    <label>SFDC</label>
                </value>
                <value>
                    <fullName>Weblabs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intermediary Contact</label>
        <referenceTo>Business_Contacts__c</referenceTo>
        <relationshipLabel>Workflow Events</relationshipLabel>
        <relationshipName>Workflow_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Workflow_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Workflow Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Open__c</fullName>
        <formula>CASE(MOD( Start_date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( End_date__c - Start_date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( End_date__c - Start_date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( End_date__c - Start_date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( End_date__c - Start_date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( End_date__c - Start_date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( End_date__c - Start_date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( End_date__c - Start_date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( End_date__c - Start_date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Business Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Workflow Events</relationshipLabel>
        <relationshipName>HPP_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overall_Stage__c</fullName>
        <label>Overall Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application received</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Before completion</fullName>
                </value>
                <value>
                    <fullName>Report on title</fullName>
                </value>
                <value>
                    <fullName>Managing Director Approval - HPP</fullName>
                </value>
                <value>
                    <fullName>Completion</fullName>
                </value>
                <value>
                    <fullName>Post completion</fullName>
                </value>
                <value>
                    <fullName>Cancel HPP</fullName>
                </value>
                <value>
                    <fullName>HPP eligibility</fullName>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>valuation recieved back</fullName>
                </value>
                <value>
                    <fullName>Declined application</fullName>
                </value>
                <value>
                    <fullName>Abandoned application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>?</fullName>
                </value>
                <value>
                    <fullName>??</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Actioned</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Workflow Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Workflow Event</label>
    <nameField>
        <displayFormat>IBB-{00000}</displayFormat>
        <label>Workflow record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Events</pluralLabel>
    <recordTypes>
        <fullName>BDM_View</fullName>
        <active>true</active>
        <description>For use by BDMs to create the Application workflow event.</description>
        <label>BDM View</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Servicedesk</fullName>
        <active>true</active>
        <label>IT Servicedesk</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>